# bdpt

./: .clang-format  .gitignore  CMakeLists.txt  env
include/geometry/: ray.hpp  shape.hpp  sphere.hpp  triangle.hpp  vec3.hpp
include/integrator/: interaction.hpp  mat.hpp  path.hpp  shape.hpp
include/mats/: dielectric.hpp  diffuse.hpp  lambertian.hpp  mat.hpp
include/scenes/: cornell.hpp
include/utils/: constants.hpp  rng.hpp  scene.hpp  vec3.hpp
src/: main.cpp
src/geometry/: ray.cpp  sphere.cpp  triangle.cpp  vec3.cpp
src/integrator/: interaction.cpp  mat.cpp  path.cpp
src/mats/: dielectric.cpp  diffuse.cpp  lambertian.cpp  mat.cpp
src/utils/: rng.cpp  scene.cpp  vec3.cpp
